Resolvendo erro do id em movies e implementando métodos úteis para o relatório de ocupação.